(add new changes on top of this file)

Änderungen
----------

v0.9.13 (??.05.2011)
 * tx_rnbase: Class loader supports extbase classes.

v0.9.12 (02.05.2011)
 * model_base: Magic method __call implemented to support FLUID. Thanks to Stephan Reuther!
 * action_BaseIOC: It is possible to set view class by Typoscript. Thanks to Stephan Reuther!

v0.9.11 (01.04.2011)
 * PageBrowser: Handle pointers out of listsize
 * BaseView: Render PLUGIN_ before CallModules
 * tx_rnbase_util_Files: new method makeZipFile

v0.9.9 (17.03.2011) (not released)
 * FormTool: Some new Buttons. Thanks to Michael Wagner
 * StartValue for totalline-Marker is configureable


v0.9.8 (24.02.2011)
 * tx_rnbase_util_TYPO3: new check methods for TYPO3 versions 4.4 and 4.5
 * tx_rnbase_model_base: fetch single record in default constructor with respect of hidden and deleted flags
 * tx_rnbase_Parameters: Accessing parameters from other extensions is possible. New method getAll().
 * tx_rnbase_util_Dates::datetime_mysql2timestamp() with timezone support
 * tx_rnbase_util_Misc new method getPidList()

v0.9.7 (04.01.2011)
 * New class tx_rnbase_util_Strings

v0.9.6 (27.12.2010)
 * Bugfix in tx_rnbase_util_DB::searchWhere: it is possible to test joined values against 0
 * tx_rnbase_util_DB: new methods enableFields() and doQuery()
 * tx_rnbase_util_TSDAM: some new methods to access DAM information

v0.9.5 (16.11.2010)
 * Bugfix: Avoid warning while parsing TS configuration for plots
 * Bugfix: Missing include in datebase unit test added. Thanks to Hannes Bochmann
 * FormTool: Submit-Buttons and Links with icons possible
 * FormTool: New method getTCEForm()
 * FormTool: New buttons with confirm message

v0.9.4 (21.10.2010)
 * tx_rnbase_configurations: new methods getInt() and getBool()
 * BaseModule: more modificatios possible for concrete modules

v0.9.3 (26.09.2010)
 * SearchBase and util_DB: Support for HAVING clause.

v0.9.2 (26.09.2010) (not released)
 * ListBuilder renders character browser